# meu-chat-tw

./: README.md  package.json
src/: chat-custom.css  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
